--- a/1 лаба/index.html
+++ b/1 лаба/index.html
@@ -40,7 +40,7 @@
             <h2>Выбор очевиден...</h2>
             <h3>Подайте документу в лучший ВУЗ страны</h3>
             <div>
-                <a href="#" class="btn">Подать</a>
+                <a href="podat.html" class="btn">Подать</a>
             </div>
         </div>
     
