--- a/1 лаба/index.html
+++ b/1 лаба/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#">Войти</a></li>
+                    <li><a href="auth.html">Войти</a></li>
                     <li><a href="#">Регистрация</a></li>
                     <li><a href="#">Поддержка</a></li>
                 </ul>
