--- a/1 лаба/index.html
+++ b/1 лаба/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section> 
+    <main> 
         <header class="header">
             <a href="https://mospolytech.ru/" target="_blank">
                 <img src="https://fkc-opk.ru/Content/img/News/polytech_logo_main_591589cf4ec93.png" width="300" height="100">
@@ -31,21 +31,21 @@
                 </ul>
             </nav>
         </header>
-    </section>
+    </main>
     
     <section class="mid">
         <div class="bac">
             <p><b>Лучший выбор для вас!</b></p>
-            <h1>Не знаете куда поступить? </h1>
-            <h2>Выбор очевиден...</h2>
-            <h3>Подайте документу в лучший ВУЗ страны</h3>
+            <p>Не знаете куда поступить? </p>
+            <p>Выбор очевиден...</p>
+            <p>Подайте документу в лучший ВУЗ страны</p>
             <div>
                 <a href="podat.html" class="btn">Подать</a>
             </div>
         </div>
     
         <div class="bak">
-            <h1>Наши филиалы</h1>
+            <h2 id="nevid">Наши филиалы</h2>
             <table class="tab">
                 <tr>
                     <td class="big"><b>Филиал</b></td>
